--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -153,7 +153,7 @@
                     </video>
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="cell">
                     <video controls>
                         <source src="videos/anime_7.mp4">
@@ -164,7 +164,7 @@
                         <source src="videos/anime_8.mp4">
                     </video>
                 </div>
-            </div>
+            </div>-->
 
             <div class="leftAlign">
                 <h3>Group 2 - AI Generated</h3>
