--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -564,7 +564,9 @@
         </article>
         
         <footer class="content">
-            <p>Xxxxx: Xxxxx xxxxx xxxxx xxx xxxx.</p>
+            <div class="centerAlign">
+                <p>Xxxxx: Xxxxx xxxxx xxxxx xxx xxxx.</p>
+            </div>
         </footer>
     </body>
 </html>
