--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -478,10 +478,10 @@
                     <span>Without Prompt</span>
                 </div>
                 <div class="cell">
-                    <span>Prompt: motorcycle engine</span>
+                    <span>Prompt: </span><span style="font-weight: bold;">motorcycle engine</span>
                 </div>
                 <div class="cell">
-                    <span>Prompt: car horn</span>
+                    <span>Prompt: </span><span style="font-weight: bold;">car horn</span>
                 </div>
             </div>
             <div class="row">
@@ -506,7 +506,7 @@
                     <span>Without Prompt</span>
                 </div>
                 <div class="cell">
-                    <span>Prompt: birdsong</span>
+                    <span>Prompt: </span><span style="font-weight: bold;">birdsong</span>
                 </div>
             </div>
             <div class="row">
@@ -526,7 +526,7 @@
                     <span>Without Prompt</span>
                 </div>
                 <div class="cell">
-                    <span>Prompt: thunder</span>
+                    <span>Prompt: </span><span style="font-weight: bold;">thunder</span>
                 </div>
             </div>
             <div class="row">
@@ -546,7 +546,7 @@
                     <span>Without Prompt</span>
                 </div>
                 <div class="cell">
-                    <span>Prompt: subway driving</span>
+                    <span>Prompt: </span><span style="font-weight: bold;">subway driving</span>
                 </div>
             </div>
             <div class="row">
