--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -473,14 +473,14 @@
             <div class="leftAlign">
                 <h3>Group 6 - Text Control</h3>
             </div>
-            <div class="row">
-                <div class="cell">
+            <div class="row_3">
+                <div class="title">
                     <span>Without Prompt</span>
                 </div>
-                <div class="cell">
+                <div class="title">
                     <span>Prompt: </span><span style="font-weight: bold;">motorcycle engine</span>
                 </div>
-                <div class="cell">
+                <div class="title">
                     <span>Prompt: </span><span style="font-weight: bold;">car horn</span>
                 </div>
             </div>
@@ -502,10 +502,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="cell">
+                <div class="title">
                     <span>Without Prompt</span>
                 </div>
-                <div class="cell">
+                <div class="title">
                     <span>Prompt: </span><span style="font-weight: bold;">birdsong</span>
                 </div>
             </div>
@@ -522,10 +522,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="cell">
+                <div class="title">
                     <span>Without Prompt</span>
                 </div>
-                <div class="cell">
+                <div class="title">
                     <span>Prompt: </span><span style="font-weight: bold;">thunder</span>
                 </div>
             </div>
@@ -542,10 +542,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="cell">
+                <div class="title">
                     <span>Without Prompt</span>
                 </div>
-                <div class="cell">
+                <div class="title">
                     <span>Prompt: </span><span style="font-weight: bold;">subway driving</span>
                 </div>
             </div>
