--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -49,18 +49,18 @@
                 <h2>Content</h2>
             </div>
             <div class="leftAlign">
-                <a href="#section1">Promotional Video</a>
-                <a href="#section2">Abstract</a>
-                <a href="#section3">Method</a>
-                <a href="#section4">V2A Generation Results Visualization</a>
-                <a href="#section5">V2A Generation Examples</a>
-                <a href="#section5_1">- Audio Generation for Animation</a>
-                <a href="#section5_2">- Audio Generation for AI Generated Video</a>
-                <a href="#section5_3">- Audio Generation for Game</a>
-                <a href="#section5_4">- Audio Generation for Real World</a>
-                <a href="#section5_5">- Audio Generation for Long Time Video</a>
-                <a href="#section5_6">- Text Control</a>
-                <a href="#section5_7">- V2A Generation Comparison with Prior Work</a>
+                <p><a href="#section1">Promotional Video</a></p>
+                <p><a href="#section2">Abstract</a></p>
+                <p><a href="#section3">Method</a></p>
+                <p><a href="#section4">V2A Generation Results Visualization</a></p>
+                <p><a href="#section5">V2A Generation Examples</a></p>
+                <p><a href="#section5_1">- Audio Generation for Animation</a></p>
+                <p><a href="#section5_2">- Audio Generation for AI Generated Video</a></p>
+                <p><a href="#section5_3">- Audio Generation for Game</a></p>
+                <p><a href="#section5_4">- Audio Generation for Real World</a></p>
+                <p><a href="#section5_5">- Audio Generation for Long Time Video</a></p>
+                <p><a href="#section5_6">- Text Control</a></p>
+                <p><a href="#section5_7">- V2A Generation Comparison with Prior Work</a></p>
             </div>
         </article>
         
