--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -580,13 +580,19 @@
             </div>
             <div class="row_5">
                 <div class="title">
-                    <span>Without Prompt</span>
+                    <span>Ours</span>
                 </div>
                 <div class="title">
-                    <span>Prompt: </span><span style="font-weight: bold;">motorcycle engine</span>
+                    <span>Prior Work 1</span>
                 </div>
                 <div class="title">
-                    <span>Prompt: </span><span style="font-weight: bold;">car horn</span>
+                    <span>Prior Work 2</span>
+                </div>
+                <div class="title">
+                    <span>Prior Work 3</span>
+                </div>
+                <div class="title">
+                    <span>Prior Work 4</span>
                 </div>
             </div>
             <div class="row_5">
@@ -598,6 +604,16 @@
                 <div class="cell">
                     <video controls>
                         <source src="videos/text_1_2.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_1_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_1_3.mp4">
                     </video>
                 </div>
                 <div class="cell">
