--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -60,7 +60,7 @@
                 <p><a href="#section5_4">- Audio Generation for Real World</a></p>
                 <p><a href="#section5_5">- Audio Generation for Long Time Video</a></p>
                 <p><a href="#section5_6">- Text Control</a></p>
-                <p><a href="#section5_7">- V2A Generation Comparison with Prior Work</a></p>
+                <p><a href="#section5_7">- Audio Generation Comparison with Prior Work</a></p>
             </div>
         </article>
         
@@ -576,7 +576,7 @@
             </div>
 
             <div class="leftAlign" id="section5_7">
-                <h3>V2A Generation Comparison with Prior Work</h3>
+                <h3>Audio Generation Comparison with Prior Work</h3>
             </div>
             <div class="row_5">
                 <div class="title">
