--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -54,13 +54,13 @@
                 <p><a href="#section3">Method</a></p>
                 <p><a href="#section4">V2A Generation Results Visualization</a></p>
                 <p><a href="#section5">V2A Generation Examples</a></p>
-                <p><a href="#section5_1">- Audio Generation for Animation</a></p>
-                <p><a href="#section5_2">- Audio Generation for AI Generated Video</a></p>
-                <p><a href="#section5_3">- Audio Generation for Game</a></p>
-                <p><a href="#section5_4">- Audio Generation for Real World</a></p>
-                <p><a href="#section5_5">- Audio Generation for Long Time Video</a></p>
-                <p><a href="#section5_6">- Text Control</a></p>
-                <p><a href="#section5_7">- Audio Generation Comparison with Prior Work</a></p>
+                <p><a class="a_sub" href="#section5_1">Audio Generation for Animation</a></p>
+                <p><a class="a_sub" href="#section5_2">Audio Generation for AI Generated Video</a></p>
+                <p><a class="a_sub" href="#section5_3">Audio Generation for Game</a></p>
+                <p><a class="a_sub" href="#section5_4">Audio Generation for Real World</a></p>
+                <p><a class="a_sub" href="#section5_5">Audio Generation for Long Time Video</a></p>
+                <p><a class="a_sub" href="#section5_6">Text Control</a></p>
+                <p><a class="a_sub" href="#section5_7">Audio Generation Comparison with Prior Work</a></p>
             </div>
         </article>
         
