--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -49,15 +49,11 @@
                 <h2>Content</h2>
             </div>
             <div class="leftAlign">
-                <a href="#section1">Promotional Video</a>
-                <br>
-                <a href="#section2">Abstract</a>
-                <br>
-                <a href="#section3">Method</a>
-                <br>
-                <a href="#section4">V2A Generation Results Visualization</a>
-                <br>
-                <a href="#section5">V2A Generation Examples</a>
+                <p><a href="#section1">Promotional Video</a></p>
+                <p><a href="#section2">Abstract</a></p>
+                <p><a href="#section3">Method</a></p>
+                <p><a href="#section4">V2A Generation Results Visualization</a></p>
+                <p><a href="#section5">V2A Generation Examples</a></p>
                 <br>
                 <a class="a_sub" href="#section5_3">Audio Generation for Game</a>
                 <br>
