--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -14,7 +14,7 @@
             <div class="centerAlign">
                 <p>
                     <span>Zihao Chen<sup>1</sup></span><span>,&nbsp;</span>
-                    <span>Haomin Zhang<sup>2</sup></span><span>,&nbsp;</span>
+                    <span>Haomin Zhang<sup>1</sup></span><span>,&nbsp;</span>
                     <span>Xinhan Di<sup>1</sup></span><span>,&nbsp;</span>
                     <span>Haoyu Wang<sup>1, 2</sup></span><span>,&nbsp;</span>
                     <span>Sizhe Shan<sup>1, 2</sup></span><span>,&nbsp;</span>
@@ -497,42 +497,177 @@
                     <span>Ours</span>
                 </div>
                 <div class="title">
-                    <span>Prior Work 1</span>
+                    <span>GT</span>
                 </div>
                 <div class="title">
-                    <span>Prior Work 2</span>
+                    <span>FoleyCrafter</span>
                 </div>
                 <div class="title">
-                    <span>Prior Work 3</span>
+                    <span>Diff-Foley</span>
                 </div>
                 <div class="title">
-                    <span>Prior Work 4</span>
+                    <span>SpecVQGAN</span>
                 </div>
             </div>
             <div class="row_5">
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_1_1.mp4">
+                        <source src="videos/ours_1.mp4">
                     </video>
                 </div>
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_1_2.mp4">
+                        <source src="videos/gt_1.mp4">
                     </video>
                 </div>
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_1_3.mp4">
+                        <source src="videos/foleyCrafter_1.mp4">
                     </video>
                 </div>
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_1_3.mp4">
+                        <source src="videos/diffFoley_1.mp4">
                     </video>
                 </div>
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_1_3.mp4">
+                        <source src="videos/specVqGan_1.mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="row_5">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/ours_2.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/gt_2.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/foleyCrafter_2.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/diffFoley_2.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/specVqGan_2.mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="row_5">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/ours_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/gt_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/foleyCrafter_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/diffFoley_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/specVqGan_3.mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="row_5">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/ours_4.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/gt_4.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/foleyCrafter_4.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/diffFoley_4.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/specVqGan_4.mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="row_5">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/ours_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/gt_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/foleyCrafter_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/diffFoley_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/specVqGan_5.mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="row_5">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/ours_6.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/gt_6.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/foleyCrafter_6.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/diffFoley_6.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/specVqGan_6.mp4">
                     </video>
                 </div>
             </div>
