--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -9,7 +9,7 @@
     <body>
         <header class="content">
             <div class="centerAlign">
-                <h1>Bailing-Foley:&nbsp;Video-Guided&nbsp;Sound&nbsp;Effects&nbsp;Generation&nbsp;withMultimodal&nbsp;Chain-of-Thoughts&nbsp;Controls</h1>
+                <h1>Bailing-Foley:&nbsp;Video-Guided&nbsp;Sound&nbsp;Effects&nbsp;Generation&nbsp;with&nbsp;Multimodal&nbsp;Chain-of-Thoughts&nbsp;Controls</h1>
             </div>
             <div class="centerAlign">
                 <p>
