--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -13,17 +13,7 @@
             </div>
             <div class="centerAlign">
                 <p>
-                    <span>Zihao&nbsp;Chen<sup>1</sup></span><span>,&nbsp;</span>
-                    <span>Haomin&nbsp;Zhang<sup>1</sup></span><span>,&nbsp;</span>
-                    <span>Xinhan&nbsp;Di<sup>1</sup></span><span>,&nbsp;</span>
-                    <span>Haoyu&nbsp;Wang<sup>1,&nbsp;2</sup></span><span>,&nbsp;</span>
-                    <span>Sizhe&nbsp;Shan<sup>1,&nbsp;2</sup></span><span>,&nbsp;</span>
-                    <span>Junjie&nbsp;Zheng<sup>1</sup></span><span>,&nbsp;</span> 
-                    <span>Yunming&nbsp;Liang<sup>1</sup></span><span>,&nbsp;</span>
-                    <span>Yihan&nbsp;Fan<sup>1,&nbsp;3</sup></span><span>,&nbsp;</span>
-                    <span>Yihua&nbsp;Wang<sup>1</sup></span><span>,&nbsp;</span>
-                    <span>Chaofan&nbsp;Ding<sup>1</sup></span><span>&nbsp;and&nbsp;</span>
-                    <span>Lei&nbsp;Xie<sup>4</sup></span>
+                    <span>Zihao&nbsp;Chen<sup>1</sup></span><span>,&nbsp;</span><span>Haomin&nbsp;Zhang<sup>1</sup></span><span>,&nbsp;</span><span>Xinhan&nbsp;Di<sup>1</sup></span><span>,&nbsp;</span><span>Haoyu&nbsp;Wang<sup>1,&nbsp;2</sup></span><span>,&nbsp;</span><span>Sizhe&nbsp;Shan<sup>1,&nbsp;2</sup></span><span>,&nbsp;</span><span>Junjie&nbsp;Zheng<sup>1</sup></span><span>,&nbsp;</span><span>Yunming&nbsp;Liang<sup>1</sup></span><span>,&nbsp;</span><span>Yihan&nbsp;Fan<sup>1,&nbsp;3</sup></span><span>,&nbsp;</span><span>Yihua&nbsp;Wang<sup>1</sup></span><span>,&nbsp;</span><span>Chaofan&nbsp;Ding<sup>1</sup></span><span>&nbsp;and&nbsp;</span><span>Lei&nbsp;Xie<sup>4</sup></span>
                     <br>
                     <br>
                     <span><sup>1</sup>AI&nbsp;Lab&nbsp;Giant Network</span>
