--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -39,18 +39,31 @@
                 <h2>Content</h2>
             </div>
             <div class="leftAlign">
-                <p style="margin-top: 0.25; margin-bottom: 0.25;"><a href="#section1">Promotional&nbsp;Video</a></p>
-                <p style="margin-top: 0.25; margin-bottom: 0.25;"><a href="#section2">Abstract</a></p>
-                <p style="margin-top: 0.25; margin-bottom: 0.25;"><a href="#section3">Method</a></p>
-                <p style="margin-top: 0.25; margin-bottom: 0.25;"><a href="#section4">V2A&nbsp;Generation&nbsp;Results&nbsp;Visualization</a></p>
-                <p style="margin-top: 0.25; margin-bottom: 0.25;"><a href="#section5">V2A&nbsp;Generation&nbsp;Examples</a></p>
-                <p style="margin-top: 0.125; margin-bottom: 0.125;"><a class="a_sub" href="#section5_3">Audio&nbsp;Generation&nbsp;for&nbsp;Game</a></p>
-                <p style="margin-top: 0.125; margin-bottom: 0.125;"><a class="a_sub" href="#section5_1">Audio&nbsp;Generation&nbsp;for&nbsp;Animation</a></p>
-                <p style="margin-top: 0.125; margin-bottom: 0.125;"><a class="a_sub" href="#section5_4">Audio&nbsp;Generation&nbsp;for&nbsp;Real&nbsp;World</a></p>
-                <p style="margin-top: 0.125; margin-bottom: 0.125;"><a class="a_sub" href="#section5_5">Audio&nbsp;Generation&nbsp;for&nbsp;Long&nbsp;Time&nbsp;Video</a></p>
-                <p style="margin-top: 0.125; margin-bottom: 0.125;"><a class="a_sub" href="#section5_2">Audio&nbsp;Generation&nbsp;for&nbsp;AI&nbsp;Generated&nbsp;Video</a></p>
-                <p style="margin-top: 0.125; margin-bottom: 0.125;"><a class="a_sub" href="#section5_7">Audio&nbsp;Generation&nbsp;Comparison&nbsp;with&nbsp;Prior&nbsp;Work</a></p>
-                <p style="margin-top: 0.125; margin-bottom: 0.125;"><a class="a_sub" href="#section5_6">Text&nbsp;Control</a></p>
+                <p>
+                    <a href="#section1">Promotional&nbsp;Video</a>
+                    <br>
+                    <a href="#section2">Abstract</a>
+                    <br>
+                    <a href="#section3">Method</a>
+                    <br>
+                    <a href="#section4">V2A&nbsp;Generation&nbsp;Results&nbsp;Visualization</a>
+                    <br>
+                    <a href="#section5">V2A&nbsp;Generation&nbsp;Examples</a>
+                    <br>
+                    <a class="a_sub" href="#section5_3">Audio&nbsp;Generation&nbsp;for&nbsp;Game</a>
+                    <br>
+                    <a class="a_sub" href="#section5_1">Audio&nbsp;Generation&nbsp;for&nbsp;Animation</a>
+                    <br>
+                    <a class="a_sub" href="#section5_4">Audio&nbsp;Generation&nbsp;for&nbsp;Real&nbsp;World</a>
+                    <br>
+                    <a class="a_sub" href="#section5_5">Audio&nbsp;Generation&nbsp;for&nbsp;Long&nbsp;Time&nbsp;Video</a>
+                    <br>
+                    <a class="a_sub" href="#section5_2">Audio&nbsp;Generation&nbsp;for&nbsp;AI&nbsp;Generated&nbsp;Video</a>
+                    <br>
+                    <a class="a_sub" href="#section5_7">Audio&nbsp;Generation&nbsp;Comparison&nbsp;with&nbsp;Prior&nbsp;Work</a>
+                    <br>
+                    <a class="a_sub" href="#section5_6">Text&nbsp;Control</a>
+                </p>
             </div>
         </article>
 
