--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -40,28 +40,29 @@
             </div>
             <div class="leftAlign">
                 <p>
-                    <a href="#section1">Promotional&nbsp;Video</a>
-                    <a href="#section2">Abstract</a>
+                    <a href="#section1" style="margin-top: 0.25; margin-bottom: 0.25;">Promotional&nbsp;Video</a>
                     <br>
-                    <a href="#section3">Method</a>
+                    <a href="#section2" style="margin-top: 0.25; margin-bottom: 0.25;">Abstract</a>
                     <br>
-                    <a href="#section4">V2A&nbsp;Generation&nbsp;Results&nbsp;Visualization</a>
+                    <a href="#section3" style="margin-top: 0.25; margin-bottom: 0.25;">Method</a>
                     <br>
-                    <a href="#section5">V2A&nbsp;Generation&nbsp;Examples</a>
+                    <a href="#section4" style="margin-top: 0.25; margin-bottom: 0.25;">V2A&nbsp;Generation&nbsp;Results&nbsp;Visualization</a>
                     <br>
-                    <a class="a_sub" href="#section5_3">Audio&nbsp;Generation&nbsp;for&nbsp;Game</a>
+                    <a href="#section5" style="margin-top: 0.25; margin-bottom: 0.25;">V2A&nbsp;Generation&nbsp;Examples</a>
                     <br>
-                    <a class="a_sub" href="#section5_1">Audio&nbsp;Generation&nbsp;for&nbsp;Animation</a>
+                    <a class="a_sub" href="#section5_3" style="margin-top: 0.125; margin-bottom: 0.125;">Audio&nbsp;Generation&nbsp;for&nbsp;Game</a>
                     <br>
-                    <a class="a_sub" href="#section5_4">Audio&nbsp;Generation&nbsp;for&nbsp;Real&nbsp;World</a>
+                    <a class="a_sub" href="#section5_1" style="margin-top: 0.125; margin-bottom: 0.125;">Audio&nbsp;Generation&nbsp;for&nbsp;Animation</a>
                     <br>
-                    <a class="a_sub" href="#section5_5">Audio&nbsp;Generation&nbsp;for&nbsp;Long&nbsp;Time&nbsp;Video</a>
+                    <a class="a_sub" href="#section5_4" style="margin-top: 0.125; margin-bottom: 0.125;">Audio&nbsp;Generation&nbsp;for&nbsp;Real&nbsp;World</a>
                     <br>
-                    <a class="a_sub" href="#section5_2">Audio&nbsp;Generation&nbsp;for&nbsp;AI&nbsp;Generated&nbsp;Video</a>
+                    <a class="a_sub" href="#section5_5" style="margin-top: 0.125; margin-bottom: 0.125;">Audio&nbsp;Generation&nbsp;for&nbsp;Long&nbsp;Time&nbsp;Video</a>
                     <br>
-                    <a class="a_sub" href="#section5_7">Audio&nbsp;Generation&nbsp;Comparison&nbsp;with&nbsp;Prior&nbsp;Work</a>
+                    <a class="a_sub" href="#section5_2" style="margin-top: 0.125; margin-bottom: 0.125;">Audio&nbsp;Generation&nbsp;for&nbsp;AI&nbsp;Generated&nbsp;Video</a>
                     <br>
-                    <a class="a_sub" href="#section5_6">Text&nbsp;Control</a>
+                    <a class="a_sub" href="#section5_7" style="margin-top: 0.125; margin-bottom: 0.125;">Audio&nbsp;Generation&nbsp;Comparison&nbsp;with&nbsp;Prior&nbsp;Work</a>
+                    <br>
+                    <a class="a_sub" href="#section5_6" style="margin-top: 0.125; margin-bottom: 0.125;">Text&nbsp;Control</a>
                 </p>
             </div>
         </article>
