--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -233,6 +233,18 @@
                     </video>
                 </div>
             </div>
+            <div class="row">
+                <div class="cell">
+                    <video class="cell" controls>
+                        <source src="videos/anime_7.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video class="cell" controls>
+                        <source src="videos/anime_8.mp4">
+                    </video>
+                </div>
+            </div>
 
             <div class="leftAlign" id="section5_4">
                 <h3>Audio&nbsp;Generation&nbsp;for&nbsp;Real&nbsp;World</h3>
@@ -653,10 +665,10 @@
                     <span>Without&nbsp;Prompt</span>
                 </div>
                 <div class="title">
-                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">motorcycle engine</span>
+                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">motorcycle&nbsp;engine</span>
                 </div>
                 <div class="title">
-                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">car horn</span>
+                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">car&nbsp;horn</span>
                 </div>
             </div>
             <div class="row_3">
@@ -681,7 +693,7 @@
                     <span>Without&nbsp;Prompt</span>
                 </div>
                 <div class="title">
-                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">birdsong</span>
+                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">bird&nbsp;song</span>
                 </div>
             </div>
             <div class="row">
@@ -721,7 +733,7 @@
                     <span>Without&nbsp;Prompt</span>
                 </div>
                 <div class="title">
-                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">subway driving</span>
+                    <span>Prompt:&nbsp;</span><span style="font-weight: bold;">subway&nbsp;driving</span>
                 </div>
             </div>
             <div class="row">
