--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -29,7 +29,7 @@
                 <p>
                     <a class="a_paper" href="https://arxiv.org/" target="_blank">[Paper]</a>
                     <a class="a_code" href="https://git.devcloud.ztgame.com/" target="_blank">[Code]</a>
-                    <a class="a_video" href="https://www.youtube.com/" target="_blank">[YouTube]</a>
+                    <a class="a_video" href="https://www.youtube.com/" target="_blank">[Promotional&nbsp;Video]</a>
                 </p>
             </div>
         </header>
