--- a/yingsound/index.html
+++ b/yingsound/index.html
@@ -96,7 +96,7 @@
                 <p>Figure&nbsp;1:&nbsp;Overview&nbsp;of&nbsp;YingSound.</p>
             </div>
             <div class="leftAlign">
-                <p>It comprises two key components: Conditional Flow Matching with Transformers and Adaptive Multi-modal Chain-of-Thought-Based Audio Generation.</p>
+                <p>It comprises two key components: <span style="font-weight: bold;">Conditional Flow Matching with Transformers and Adaptive Multi-modal Chain-of-Thought-Based Audio Generation</span>.</p>
             </div>
         </article>
 
@@ -173,18 +173,6 @@
                 <div class="cell">
                     <video controls>
                         <source src="videos/game_7.mp4">
-                    </video>
-                </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/game_8.mp4">
-                    </video>
-                </div>
-            </div>
-            <div class="row">
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/game_9.mp4">
                     </video>
                 </div>
                 <div class="cell">
@@ -477,7 +465,7 @@
             <div class="leftAlign" id="section5_7">
                 <h3>Audio&nbsp;Generation&nbsp;Comparison&nbsp;with&nbsp;Prior&nbsp;Work</h3>
             </div>
-            <div class="row_5">
+            <div class="row_4">
                 <div class="title">
                     <span>Ours</span>
                 </div>
@@ -490,11 +478,8 @@
                 <div class="title">
                     <span>Diff-Foley</span>
                 </div>
-                <div class="title">
-                    <span>SpecVQGAN</span>
-                </div>
             </div>
-            <div class="row_5">
+            <div class="row_4">
                 <div class="cell">
                     <video controls>
                         <source src="videos/ours_1.mp4">
@@ -515,13 +500,8 @@
                         <source src="videos/diffFoley_1.mp4">
                     </video>
                 </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/specVqGan_1.mp4">
-                    </video>
-                </div>
             </div>
-            <div class="row_5">
+            <div class="row_4">
                 <div class="cell">
                     <video controls>
                         <source src="videos/ours_2.mp4">
@@ -542,13 +522,8 @@
                         <source src="videos/diffFoley_2.mp4">
                     </video>
                 </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/specVqGan_2.mp4">
-                    </video>
-                </div>
             </div>
-            <div class="row_5">
+            <div class="row_4">
                 <div class="cell">
                     <video controls>
                         <source src="videos/ours_3.mp4">
@@ -569,13 +544,8 @@
                         <source src="videos/diffFoley_3.mp4">
                     </video>
                 </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/specVqGan_3.mp4">
-                    </video>
-                </div>
             </div>
-            <div class="row_5">
+            <div class="row_4">
                 <div class="cell">
                     <video controls>
                         <source src="videos/ours_4.mp4">
@@ -596,13 +566,8 @@
                         <source src="videos/diffFoley_4.mp4">
                     </video>
                 </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/specVqGan_4.mp4">
-                    </video>
-                </div>
             </div>
-            <div class="row_5">
+            <div class="row_4">
                 <div class="cell">
                     <video controls>
                         <source src="videos/ours_5.mp4">
@@ -623,13 +588,8 @@
                         <source src="videos/diffFoley_5.mp4">
                     </video>
                 </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/specVqGan_5.mp4">
-                    </video>
-                </div>
             </div>
-            <div class="row_5">
+            <div class="row_4">
                 <div class="cell">
                     <video controls>
                         <source src="videos/ours_6.mp4">
@@ -648,11 +608,6 @@
                 <div class="cell">
                     <video controls>
                         <source src="videos/diffFoley_6.mp4">
-                    </video>
-                </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/specVqGan_6.mp4">
                     </video>
                 </div>
             </div>
